[package]
name = "rusticcosmos"
version = "0.1.0"
edition = "2021"
authors = ["Torin May <torinmay@gmail.com"]
description = "A command line tool for translating packets on a network interface to human-readable form"
readme = "README.md"
homepage = "https://github.com/TorinM/rusticcosmos"
repository = "https://github.com/TorinM/rusticcosmos"
keywords = ["cli", "cybersecurity", "cyber", "security", "packet", "sniffing"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
dns-lookup = "2.0.4"
once_cell = "1.19.0"
pnet = "0.35.0"
serde = "1.0.203"
serde_derive = "1.0.203"
tokio = { version = "1.38.0", features = ["full"] }
